--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,11 @@
     "stack": "cpp",
     "string": "cpp",
     "xtree": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "array": "cpp",
+    "bitset": "cpp",
+    "regex": "cpp",
+    "valarray": "cpp"
   }
   
 }
