--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,17 @@
     "array": "cpp",
     "bitset": "cpp",
     "regex": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "filesystem": "cpp",
+    "forward_list": "cpp",
+    "span": "cpp",
+    "string_view": "cpp",
+    "unordered_set": "cpp",
+    "__tuple": "cpp"
   }
   
 }
