--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
     "span": "cpp",
     "string_view": "cpp",
     "unordered_set": "cpp",
-    "__tuple": "cpp"
+    "__tuple": "cpp",
+    "functional": "cpp"
   }
   
 }
